Dinotrace NEWS --  history of user-visible changes.
Copyright (C) 1998-2002 Wilson Snyder.
Copyright (C) 1992-1997 Digital Equipment Corportation.
See the end for copying conditions.

The contributors that suggested a given feature is shown in [].
	
This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

* Changes in Dinotrace 9.1g  01/24/2002

***	Reread all traces on receiving a USR1 signal.  [Uwe Bonnes]

****	Allow value searches on one-bit signals.  [Vitaly Oratovsky]


* Changes in Dinotrace 9.1f  01/08/2002

***	Let right button terminate Zoom click.  [Uwe Bonnes]

****	Fixed Emacs 21.0 incompatibility with back-annotation.

****	Hacked around bug causing window manager crash when
	using Examine inside Zoom.  [Uwe Bonnes]

* Changes in Dinotrace 9.1e  11/16/2001

***	Allow 1-bit wide signals to have statenames.  [Dominik Strasser]

***	Eliminate common prefix from postscript dumps.  [Dominik Strasser]

***	Show count of posedges and negedges in value examine.


* Changes in Dinotrace 9.1d  5/24/2001

***	Fixed missing 0's in display of >64 bit numbers. [Amitvikram Rajkhowa]

***	Fixed stripping of characters after bus prefix.  [Steve Hoover]

* Changes in Dinotrace 9.1c  2/13/2001

***	Fixed Verilog reading ignoring the hiearchy separator. [Dominik Strasser]

* Changes in Dinotrace 9.1b  2/13/2001

****	Documentation updates.


* Changes in Dinotrace 9.1a  1/22/2001

**	Added analog waveform format.  [Dave Colson]
	Includes new Signal Waveform menu and signal_waveform command.


* Changes in Dinotrace 9.0m  11/21/2000

****	Fixed a bug reading compressed tempest on Digital UNIX. [Steve Hoover]


* Changes in Dinotrace 9.0l  8/30/2000

**	Added support for femtosecond Verilog timescales. [Derek Bosch]


* Changes in Dinotrace 9.0k  7/17/2000

****	Fixed bug with $comment after $enddefinitions. [Harunobu Miyashita]

****	Fixed Tempest reading signals over 128 bits. [Ta-Chung Chang]
	This bug was introduced in 9.0i.
