@@ -7,6 +7,11 @@ The contributors that suggested a given feature is shown in [].
 	
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
+* Changes in Dinotrace *********
+
+***	Save_duplicates is now on by default.
+
+
 * Changes in Dinotrace 9.1g  01/24/2002
 
 ***	Reread all traces on receiving a USR1 signal.  [Uwe Bonnes]
